# virusscan-web

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile.dev  Dockerfile.web  Makefile  README.md  compose.dev.yml  compose.yml  docker_startup.sh  manage.py  package-lock.json  pyproject.toml  pytest.ini
apps/scans/: admin.py  api.py  apps.py  models.py  tasks.py  utils.py
apps/scans/migrations/: 0001_initial.py  0002_alter_scan_status.py
apps/scans/tests/: test_api.py
apps/web/: api.py  apps.py  middleware.py  models.py  urls.py  views.py
apps/web/migrations/: 0001_initial.py
frontend/: Dockerfile.dev  package-lock.json  package.json
static/css/: input.css  output.css  styles.css
static/js/: utils.js
static/src/: output.css
templates/: _base.html  base.html  base_app.html  index.html  settings.html
templates/cotton/: file_scan.html  scans_table.html  stats_card.html  theme_toggle.html
templates/cotton/settings/: api_keys_table.html
templates/registration/: login.html
virusscan/: api.py  asgi.py  celery.py  settings.py  urls.py  wsgi.py
