[project]
name = "virusscan-web"
version = "0.1.0"
description = "Web application for virus scanning"
authors = [
    {name = "Felipe Almeida", email = "felipe@security.dev"},
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "clamav-client==0.6.3",
    "django==4.2.18",
    "django-compressor>=4.5.1",
    "django-cotton>=1.5.2",
    "django-environ>=0.12.0",
    "django-ninja>=1.3.0",
    "psycopg[binary]>=3.2.4",
]

[dependency-groups]
dev = [
    "ruff>=0.9.4",
]
